spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,7 @@
 body {
   text-align: center;
+  position: relative;
+  top: 55px;
   color: white;
   background-image: url('../img/sparkly-stars.jpg');
   height: 100%;
@@ -18,7 +20,7 @@ body {
   border: 1px black;
   width: 250px;
   position: relative;
-  top: 100px;
+  top: 200px;
   padding: 14px 40px;
 }
 
